[gd_scene load_steps=3 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_ui.gd" id="1_dialogue_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialogue"]
bg_color = Color(0.08, 0.08, 0.1, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.7, 0.6, 0.4, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stats"]
bg_color = Color(0.1, 0.1, 0.12, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dialogue_ui")

[node name="BackgroundLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="TextureRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="BackgroundColor" type="ColorRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.1, 0.15, 1)

[node name="PortraitLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PortraitContainer" type="PanelContainer" parent="PortraitLayer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -150.0
offset_right = 340.0
offset_bottom = 150.0
grow_vertical = 2

[node name="PortraitImage" type="TextureRect" parent="PortraitLayer/PortraitContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="DialogueLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialoguePanel" type="Panel" parent="DialogueLayer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -280.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_dialogue")

[node name="MarginContainer" type="MarginContainer" parent="DialogueLayer/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueLayer/DialoguePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SpeakerLabel" type="Label" parent="DialogueLayer/DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "NARRATOR"

[node name="DialogueLabel" type="RichTextLabel" parent="DialogueLayer/DialoguePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Dialogue text will appear here..."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="DialogueLayer/DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueLayer/DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UILayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StatsPanel" type="Panel" parent="UILayer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 300.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_stats")

[node name="StatsLabel" type="Label" parent="UILayer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "=== CHARACTER ===
Health: 100
Courage: 50
Wisdom: 50"
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="UILayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 30.0
offset_right = 250.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.5, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "STORYBLOCKS"
horizontal_alignment = 1

[node name="HelpLabel" type="Label" parent="UILayer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Press T to toggle theme | ESC to quit"
horizontal_alignment = 2
